<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:maps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnAdmissionInstructActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:titleTextColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/SuperMaterialTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/note_frame"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_note"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            />


        <TextView
            android:layout_toEndOf="@+id/textViewNote"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAdmissionInstr"
            android:padding="10dp"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewDpt"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:text="Department"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_marginTop="6dp"
        android:id="@+id/spinner"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_toEndOf="@+id/textViewDpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkboxAdmitSlip"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/textViewDpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_step1"
        android:onClick="onCheckBoxChecked"/>

    <CheckBox
        android:id="@+id/checkboxBankChallan"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/checkboxAdmitSlip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_step2"
        android:onClick="onCheckBoxChecked"/>

    <CheckBox
        android:id="@+id/checkboxAdminBlock"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/checkboxBankChallan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_step3"
        android:onClick="onCheckBoxChecked"/>

    <Button
        android:text="All Done"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/checkboxAdminBlock"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="20dp"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:onClick="onAllDone"/>


    <fragment
        android:id="@+id/map_fragment"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="380dp"/>


</RelativeLayout>