<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="9">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"/>
    <TextView
        android:id="@+id/title"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/strLogin"
        android:textSize="30dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:id="@+id/emaillayout"
      android:layout_marginLeft="40dp"
      android:layout_marginRight="40dp"
      android:layout_weight="0.7">

      <EditText
          android:id="@+id/edtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/strEmail"
          android:singleLine="true"
          android:inputType="textEmailAddress"/>

  </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0.7"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strPass"
            android:singleLine="true"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="user"
            android:textSize="22sp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="40dp"

            />

        <Spinner
            android:id="@+id/spinnerUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



    <Button
        android:id="@+id/btnForgotPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0.5"
        android:background="@android:color/transparent"
        android:text="forgot password"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/strLogin"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:onClick="onValidate"
        android:layout_weight="0.6"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAllCaps="false"
        android:text="@string/strNewAccount"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:layout_weight="0.6"
        android:onClick="onRegister"/>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

</LinearLayout>